src/main/java/com/example/delivEatAPI/error/ShopNotFoundException.java
package com.example.delivEatAPI.error;

public class ShopNotFoundException extends RuntimeException {
    public ShopNotFoundException(String message) {
        super(message);
    }

    public ShopNotFoundException(String message, Throwable cause) {
        super(message, cause);
    }
}

